@@ -22,3 +22,14 @@ class AAAA:
         """called by the registry when the vobject has been selected.
         """
         return cls
+    
+    def using_inner_function(self, etype, size=1):
+        """return a fake result set for a particular entity type"""
+        rset = AAAA([('A',)]*size, '%s X' % etype,
+                    description=[(etype,)]*size)
+        def inner(row, col=0, etype=etype, req=self, rset=rset):
+            """inner using all its argument"""
+            # pylint: disable-msg = E1103
+            return req.vreg.etype_class(etype)(req, rset, row, col)
+        # pylint: disable-msg = W0201
+        rset.get_entity = inner
